--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -14,8 +14,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/activity_margin_half">
+        android:layout_height="match_parent">
 
         <ProgressBar
             android:layout_width="wrap_content"
@@ -33,25 +32,31 @@
             android:visibility="@{viewModel.visibilityStatus.value ? View.VISIBLE : View.GONE}"
             tools:visibility="visible">
 
+            <include
+                android:id="@+id/header"
+                layout="@layout/sky_app_header"
+                app:layout_constraintBottom_toTopOf="@+id/headlines_list"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/headlines_list"
-                android:layout_marginTop="@dimen/activity_margin_ten"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fadeScrollbars="false"
-                android:nestedScrollingEnabled="false"
+                android:layout_height="0dp"
                 android:scrollbars="none"
-                app:fastScrollEnabled="false"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/header"
                 tools:itemCount="10"
                 tools:listitem="@layout/item_headline"
                 tools:orientation="vertical"
                 tools:scrollbars="horizontal"
-                tools:visibility="visible" />
+                app:layout_constraintHeight_percent="0.9"
+                tools:visibility="visible"
+                />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
