--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_grey">#c2c2c2</color>
+    <color name="black_two">#222222</color>
+    <color name="colorSkyRed">#EA021A</color>
+    <color name="toolbar_blue">#002672</color>
+    <color name="sun_yellow">#fde000</color>
 </resources>
