--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="activity_margin_half">8dp</dimen>
     <dimen name="activity_margin_quarter">4dp</dimen>
     <dimen name="activity_margin_eighth">2dp</dimen>
+    <dimen name="header_glass_max_width">360dp</dimen>
 
     <dimen name="default_elevation">3dp</dimen>
     <dimen name="view_radius">4dp</dimen>
@@ -15,4 +16,7 @@
     <dimen name="game_control_width">42dp</dimen>
     <dimen name="padding_about_bottom_common">3dp</dimen>
     <dimen name="size_title">20dp</dimen>
+
+    <dimen name="hero_text_size">22sp</dimen>
+    <dimen name="story_text_size">18sp</dimen>
 </resources>
