--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,14 +10,15 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">#00FFFFFF</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowTranslucentStatus">false</item>
         <!-- Customize your theme here. -->
     </style>
 
     <style name="Theme.SkySportsApplication.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-        <item name="android:statusBarColor" tools:targetApi="l">#00FFFFFF</item>
     </style>
 
     <style name="Theme.SkySportsApplication.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
